[gd_scene load_steps=2 format=2]

[ext_resource path="res://Class/SliderSetting.gd" type="Script" id=1]

[node name="SliderSetting" type="HBoxContainer"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 38.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="LabelSetting" type="Label" parent="."]
margin_top = 10.0
margin_right = 31.0
margin_bottom = 24.0
text = "label"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 35.0
margin_right = 1024.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="LabelNumber" type="Label" parent="VBoxContainer"]
margin_left = 981.0
margin_right = 989.0
margin_bottom = 14.0
size_flags_horizontal = 8
text = "0"

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
margin_left = 789.0
margin_top = 18.0
margin_right = 989.0
margin_bottom = 34.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 10
max_value = 0.0
step = 0.0

[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
